improve code readability

--- a/fraud_detection/URL backend.ipynb
+++ b/fraud_detection/URL backend.ipynb
@@ -23,77 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "df61eb96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pip install tld"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "adf553a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_dict = {}\n",
-    "\n",
-    "input = ' https://www.google.com'\n",
-    "label_mapping = {'benign': 0, 'defacement': 1, 'malware': 2, 'phishing': 3}\n",
-    "\n",
-    "feature_dict['use_of_ip'] = []\n",
-    "feature_dict['abnormal_url'] = []\n",
-    "feature_dict['count.'] = []\n",
-    "feature_dict['count-www'] = []\n",
-    "feature_dict['count@'] = []\n",
-    "feature_dict['count_dir'] = []\n",
-    "feature_dict['count_embed_domian'] = []\n",
-    "feature_dict['sus_words'] = []\n",
-    "feature_dict['short_url'] = []\n",
-    "feature_dict['count-https'] = []\n",
-    "feature_dict['count-http'] =  []\n",
-    "feature_dict['count%'] =[]\n",
-    "feature_dict['count-'] = []\n",
-    "feature_dict['count='] = []\n",
-    "feature_dict['count-digits'] = []\n",
-    "feature_dict['count-letters'] = []\n",
-    "feature_dict['url_length'] = []\n",
-    "feature_dict['hostname_length'] = []\n",
-    "feature_dict['fd_length'] = []\n",
-    "\n",
-    "feature_dict['tld_length'] = []\n"
+    "type_to_int = {'benign': 0, 'defacement': 1, 'malware': 2, 'phishing': 3}\n",
+    "int_to_type = {0: 'benign', 1: 'defacement', 2: 'malware', 3: 'phishing'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0c60a4ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input = 'https://www.my.com'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "e9c71dbd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input = 'https://www.my.com2'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "69bc8180",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def having_ip_address(url):\n",
     "    match = re.search(\n",
     "        '(([01]?\\\\d\\\\d?|2[0-4]\\\\d|25[0-5])\\\\.([01]?\\\\d\\\\d?|2[0-4]\\\\d|25[0-5])\\\\.([01]?\\\\d\\\\d?|2[0-4]\\\\d|25[0-5])\\\\.'\n",
@@ -153,45 +98,51 @@
     "    except:\n",
     "        return -1\n",
     "    \n",
+    "\n",
+    "def get_features(url):\n",
+    "    feature_dict = {}\n",
     "    \n",
-    "feature_dict['use_of_ip'].append(having_ip_address(input)) \n",
-    "feature_dict['abnormal_url'].append(abnormal_url(input)) \n",
-    "feature_dict['count.'].append(input.count('.'))\n",
-    "feature_dict['count-www'].append(input.count('www')) \n",
-    "feature_dict['count@'].append(input.count('@')) \n",
-    "feature_dict['count_dir'].append(no_of_dir(input)) \n",
-    "feature_dict['count_embed_domian'].append(no_of_embed(input)) \n",
-    "feature_dict['sus_words'].append(suspicious_words(input))\n",
-    "feature_dict['short_url'].append(shortening_service(input))\n",
-    "feature_dict['count-https'].append(input.count('https'))\n",
-    "feature_dict['count-http'].append(input.count('http'))\n",
-    "feature_dict['count%'].append(input.count('%'))\n",
-    "feature_dict['count-'].append(input.count('-'))\n",
-    "feature_dict['count='].append(input.count('='))\n",
-    "feature_dict['count-digits'].append(count_digit(input))\n",
-    "feature_dict['count-letters'].append(count_letter(input))\n",
-    "feature_dict['url_length'].append(len(str(input)))\n",
-    "feature_dict['hostname_length'].append(len(urlparse(input).netloc))\n",
-    "feature_dict['fd_length'].append(fd_length(input))\n",
+    "    feature_dict['use_of_ip'] = [having_ip_address(url)]\n",
+    "    feature_dict['abnormal_url'] = [abnormal_url(url)]\n",
+    "    feature_dict['count.'] = [url.count('.')]\n",
+    "    feature_dict['count-www'] = [url.count('www')]\n",
+    "    feature_dict['count@'] = [url.count('@')]\n",
+    "    feature_dict['count_dir'] = [no_of_dir(url)]\n",
+    "    feature_dict['count_embed_domian'] = [no_of_embed(url)]\n",
+    "    feature_dict['sus_words'] = [suspicious_words(url)]\n",
+    "    feature_dict['short_url'] = [shortening_service(url)]\n",
+    "    feature_dict['count-https'] = [url.count('https')]\n",
+    "#     feature_dict['count-http'] =  [url.count('http:')]\n",
+    "    feature_dict['count%'] =[url.count('%')]\n",
+    "    feature_dict['count-'] = [url.count('-')]\n",
+    "    feature_dict['count='] = [url.count('=')]\n",
+    "    feature_dict['count-digits'] = [count_digit(url)]\n",
+    "    feature_dict['count-letters'] = [count_letter(url)]\n",
+    "    feature_dict['url_length'] = [len(str(url))]\n",
+    "    feature_dict['hostname_length'] = [len(urlparse(url).netloc)]\n",
+    "    feature_dict['fd_length'] = [fd_length(url)]\n",
+    "    \n",
+    "    tld = get_tld(url, fail_silently=True)\n",
+    "    feature_dict['tld_length'] = [tld_length(tld)]\n",
     "\n",
-    "\n",
-    "tld = get_tld(input, fail_silently=True)\n",
-    "feature_dict['tld_length'].append(tld_length(tld))\n"
+    "    return feature_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "54244eca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(feature_dict)"
+    "features = get_features('https://www.google.com')\n",
+    "\n",
+    "df = pd.DataFrame(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "aff145ea",
    "metadata": {},
    "outputs": [
@@ -226,7 +177,6 @@
        "      <th>sus_words</th>\n",
        "      <th>short_url</th>\n",
        "      <th>count-https</th>\n",
-       "      <th>count-http</th>\n",
        "      <th>count%</th>\n",
        "      <th>count-</th>\n",
        "      <th>count=</th>\n",
@@ -242,25 +192,24 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>17</td>\n",
-       "      <td>23</td>\n",
+       "      <td>22</td>\n",
+       "      <td>14</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -268,19 +217,19 @@
       ],
       "text/plain": [
        "   use_of_ip  abnormal_url  count.  count-www  count@  count_dir  \\\n",
-       "0          0             0       2          1       0          2   \n",
+       "0          0             1       2          1       0          0   \n",
        "\n",
-       "   count_embed_domian  sus_words  short_url  count-https  count-http  count%  \\\n",
-       "0                   1          0          0            1           1       0   \n",
+       "   count_embed_domian  sus_words  short_url  count-https  count%  count-  \\\n",
+       "0                   0          0          0            1       0       0   \n",
        "\n",
-       "   count-  count=  count-digits  count-letters  url_length  hostname_length  \\\n",
-       "0       0       0             0             17          23                0   \n",
+       "   count=  count-digits  count-letters  url_length  hostname_length  \\\n",
+       "0       0             0             17          22               14   \n",
        "\n",
        "   fd_length  tld_length  \n",
-       "0          0          -1  "
+       "0          0           3  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,109 +240,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "ac556fcb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'rf.joblib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjoblib\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrf.joblib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m     loaded_rf \u001b[38;5;241m=\u001b[39m joblib\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[0;32m      5\u001b[0m rf_y_pred \u001b[38;5;241m=\u001b[39m loaded_rf\u001b[38;5;241m.\u001b[39mpredict(df)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    278\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    279\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[1;32m--> 284\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'rf.joblib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import joblib\n",
     "with open('rf.joblib', 'rb') as f:\n",
     "    loaded_rf = joblib.load(f)\n",
     "    \n",
-    "rf_y_pred = loaded_rf.predict(df)\n",
-    "print(type(rf_y_pred.tolist()[0]))"
+    "results = loaded_rf.predict(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "4d4956c9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(rf_y_pred.tolist()[0]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "c089cb44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_mapping = ['safe', 'defacement', 'malware', 'phishing']\n",
-    "result = rf_y_pred.tolist()\n",
-    "url_types = [label_mapping[i] for i in result]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "b7fbf7f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['phishing', 'phishing', 'phishing']"
+       "['phishing']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "url_types = [int_to_type[i] for i in results]\n",
     "url_types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c0b37a82",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['A', 'BC']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_string = 'A|BC'\n",
-    "test_string.split('|')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "3463bb2a",
+   "id": "55bb8cb3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -415,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
