--- a/createDatabase.ipynb
+++ b/createDatabase.ipynb
@@ -46,14 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully connected to the database\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mysql'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test connection to database\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmysql\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconnector\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmysql\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconnector\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Error\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Establish the connection\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mysql'"
      ]
     }
    ],
@@ -564,10 +568,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Records deleted successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymysql\n",
+    "\n",
+    "# Database connection\n",
+    "connection = pymysql.connect(\n",
+    "    host='seniorscamsafe.cdu48eiyg8cf.ap-southeast-2.rds.amazonaws.com',\n",
+    "    user='admin',  \n",
+    "    password='MonashTA0620241!',  \n",
+    "    database='SeniorSafeScam',\n",
+    "    port=3306\n",
+    ")\n",
+    "\n",
+    "try:\n",
+    "    with connection.cursor() as cursor:\n",
+    "        # SQL query to delete records with dates after 2024\n",
+    "        delete_query = \"\"\"\n",
+    "        DELETE FROM `ScamWatch` \n",
+    "        WHERE `StartOfMonth` > '2024-12-31';\n",
+    "        \"\"\"\n",
+    "        # Execute the delete query\n",
+    "        cursor.execute(delete_query)\n",
+    "        # Commit the changes\n",
+    "        connection.commit()\n",
+    "        print(\"Records deleted successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n",
+    "finally:\n",
+    "    connection.close()\n"
+   ]
   }
  ],
  "metadata": {
