added xgboost model in notebook

--- a/fraud_detection/url_detection.ipynb
+++ b/fraud_detection/url_detection.ipynb
@@ -6092,6 +6092,7 @@
    "outputs": [],
    "source": [
     "from sklearn import preprocessing, metrics\n",
+    "from xgboost import XGBClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import ConfusionMatrixDisplay, classification_report, mean_squared_error,confusion_matrix, f1_score, accuracy_score, precision_score, recall_score, auc,roc_curve"
    ]
@@ -6157,24 +6158,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "d913518f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: joblib in /Users/ziyaopiong/anaconda3/envs/dl/lib/python3.11/site-packages (1.4.2)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "id": "6cee6f1c",
    "metadata": {},
@@ -6219,6 +6202,72 @@
     "rf_y_pred = loaded_rf.predict(X_test)\n",
     "print(classification_report(y_test,rf_y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2e11b37",
+   "metadata": {},
+   "source": [
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "45c2f6d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.99      0.98     42784\n",
+      "           1       0.97      0.99      0.98      9656\n",
+      "           2       0.97      0.92      0.94      3225\n",
+      "           3       0.91      0.84      0.87      9455\n",
+      "\n",
+      "    accuracy                           0.96     65120\n",
+      "   macro avg       0.96      0.93      0.94     65120\n",
+      "weighted avg       0.96      0.96      0.96     65120\n",
+      "\n",
+      "accuracy:   0.962\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb = XGBClassifier(n_estimators= 100)\n",
+    "xgb.fit(X_train,y_train)\n",
+    "xgb_y_pred = xgb.predict(X_test)\n",
+    "print(classification_report(y_test, xgb_y_pred))\n",
+    "\n",
+    "\n",
+    "score = metrics.accuracy_score(y_test, xgb_y_pred)\n",
+    "print(\"accuracy:   %0.3f\" % score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26dfb6bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('xgb.joblib', 'rb') as f:\n",
+    "    loaded_xgb = joblib.load(f)\n",
+    "    \n",
+    "rf_y_pred = loaded_xgb.predict(X_test)\n",
+    "print(classification_report(y_test,rf_y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7350835b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
